@@ -32,7 +32,6 @@ import edu.colorado.phet.common.phetcommon.resources.PhetCommonResources;
 import edu.colorado.phet.common.phetcommon.simsharing.SimSharingEvents;
 import edu.colorado.phet.common.phetcommon.simsharing.components.SimSharingJMenuBar;
 import edu.colorado.phet.common.phetcommon.simsharing.components.SimSharingJMenuItem;
-import edu.colorado.phet.common.phetcommon.simsharing.components.SimSharingMenu;
 import edu.colorado.phet.common.phetcommon.view.menu.DeveloperMenu;
 import edu.colorado.phet.common.phetcommon.view.menu.HelpMenu;
 import edu.colorado.phet.common.phetcommon.view.menu.PhetFileMenu;
@@ -126,13 +125,8 @@ public class PhetFrame extends JFrame {
             menuBar.add( developerMenu );
         }
 
-        //If sim sharing is on, show a menu for isolating and identifying sessions, see #3145
-        if ( SimSharingEvents.isEnabled() ) {
-            menuBar.add( new SimSharingMenu( this ) );
-        }
-
         // Help menu
-        helpMenu = new HelpMenu( application );
+        helpMenu = new HelpMenu( application, this );
         menuBar.add( helpMenu );
 
         application.addModuleObserver( new ModuleObserver() {
